[package]
name = "hello_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
web-sys = { version = "0.3.57",  features = ["Event", "EventTarget", "InputEvent"] }
wasm-bindgen = "0.2.80"