[package]
name = "tiny_rdbms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
bincode = "1.3.3"
thiserror = "1.0.30"
zerocopy = "0.6.1"
serde = { version = "1.0.136", features = ["derive"] }